// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accounts index (Left Nav) snapshot matches snapshot with a few account with one selected 1`] = `
<nav
  className="MuiList-root-1 MuiList-dense-3 MuiList-padding-2 MuiList-subheader-4"
>
  <div
    className="MuiListSubheader-root-5 MuiListSubheader-sticky-10 MuiListSubheader-gutters-8"
  >
    Accounts
    <div
      className="MuiListItemSecondaryAction-root-11"
    >
      <a
        aria-current={null}
        aria-describedby={null}
        aria-label="New account"
        className="MuiButtonBase-root-26 MuiIconButton-root-20"
        href="/accounts/new"
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="0"
        title="New account"
      >
        <span
          className="MuiIconButton-label-25"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-29"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-73"
        />
      </a>
    </div>
  </div>
  <ul
    className="MuiList-root-1 MuiList-dense-3 MuiList-padding-2"
  >
    <div>
      <li
        className="MuiListItem-root-80 MuiListItem-default-83 MuiListItem-dense-84 MuiListItem-gutters-88"
        disabled={false}
      >
        <div
          className="MuiListItemIcon-root-92"
        >
          <InstitutionIcon
            institution="TD"
            size="small"
          />
        </div>
        <div
          className="MuiListItemText-root-93 MuiListItemText-dense-95"
        >
          <span
            className="MuiTypography-root-38 MuiTypography-subheading-45 MuiListItemText-primary-96 MuiListItemText-textDense-98"
          >
            TD
          </span>
        </div>
      </li>
      <ul
        className="MuiList-root-1 MuiList-dense-3 MuiList-padding-2"
      >
        <li
          className="MuiListItem-container-81"
        >
          <a
            aria-current={null}
            className="MuiButtonBase-root-26 MuiListItem-root-80 MuiListItem-default-83 MuiListItem-dense-84 MuiListItem-gutters-88 MuiListItem-button-89 MuiListItem-secondaryAction-90 MuiListItem-selected-91"
            href="/accounts/1/transactions"
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="MuiListItemText-root-93 MuiListItemText-dense-95"
            >
              <p
                className="MuiTypography-root-38 MuiTypography-body1-47 MuiTypography-colorTextSecondary-71 MuiListItemText-secondary-97 MuiListItemText-textDense-98"
              >
                <span>
                  NaN
                </span>
              </p>
            </div>
            <span
              className="MuiTouchRipple-root-73"
            />
          </a>
          <div
            className="MuiListItemSecondaryAction-root-11"
          >
            <a
              aria-current={null}
              aria-describedby={null}
              aria-label="Edit account"
              className="MuiButtonBase-root-26 MuiIconButton-root-20"
              href="/accounts/1/edit"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
              title="Edit account"
            >
              <span
                className="MuiIconButton-label-25"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-29"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </span>
              <span
                className="MuiTouchRipple-root-73"
              />
            </a>
          </div>
        </li>
        <li
          className="MuiListItem-container-81"
        >
          <a
            aria-current={null}
            className="MuiButtonBase-root-26 MuiListItem-root-80 MuiListItem-default-83 MuiListItem-dense-84 MuiListItem-gutters-88 MuiListItem-button-89 MuiListItem-secondaryAction-90"
            href="/accounts/2/transactions"
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="MuiListItemText-root-93 MuiListItemText-dense-95"
            >
              <p
                className="MuiTypography-root-38 MuiTypography-body1-47 MuiTypography-colorTextSecondary-71 MuiListItemText-secondary-97 MuiListItemText-textDense-98"
              >
                <span>
                  NaN
                </span>
              </p>
            </div>
            <span
              className="MuiTouchRipple-root-73"
            />
          </a>
          <div
            className="MuiListItemSecondaryAction-root-11"
          >
            <a
              aria-current={null}
              aria-describedby={null}
              aria-label="Edit account"
              className="MuiButtonBase-root-26 MuiIconButton-root-20"
              href="/accounts/2/edit"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
              title="Edit account"
            >
              <span
                className="MuiIconButton-label-25"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-29"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </span>
              <span
                className="MuiTouchRipple-root-73"
              />
            </a>
          </div>
        </li>
      </ul>
    </div>
    <div>
      <li
        className="MuiListItem-root-80 MuiListItem-default-83 MuiListItem-dense-84 MuiListItem-gutters-88"
        disabled={false}
      >
        <div
          className="MuiListItemIcon-root-92"
        >
          <InstitutionIcon
            institution="BMO"
            size="small"
          />
        </div>
        <div
          className="MuiListItemText-root-93 MuiListItemText-dense-95"
        >
          <span
            className="MuiTypography-root-38 MuiTypography-subheading-45 MuiListItemText-primary-96 MuiListItemText-textDense-98"
          >
            BMO
          </span>
        </div>
      </li>
      <ul
        className="MuiList-root-1 MuiList-dense-3 MuiList-padding-2"
      >
        <li
          className="MuiListItem-container-81"
        >
          <a
            aria-current={null}
            className="MuiButtonBase-root-26 MuiListItem-root-80 MuiListItem-default-83 MuiListItem-dense-84 MuiListItem-gutters-88 MuiListItem-button-89 MuiListItem-secondaryAction-90"
            href="/accounts/2/transactions"
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="MuiListItemText-root-93 MuiListItemText-dense-95"
            >
              <p
                className="MuiTypography-root-38 MuiTypography-body1-47 MuiTypography-colorTextSecondary-71 MuiListItemText-secondary-97 MuiListItemText-textDense-98"
              >
                <span>
                  NaN
                  <div
                    className="MuiChip-root-99"
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    role="button"
                    tabIndex={-1}
                  >
                    <span
                      className="MuiChip-label-118"
                    >
                      USD
                    </span>
                  </div>
                </span>
              </p>
            </div>
            <span
              className="MuiTouchRipple-root-73"
            />
          </a>
          <div
            className="MuiListItemSecondaryAction-root-11"
          >
            <a
              aria-current={null}
              aria-describedby={null}
              aria-label="Edit account"
              className="MuiButtonBase-root-26 MuiIconButton-root-20"
              href="/accounts/2/edit"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
              title="Edit account"
            >
              <span
                className="MuiIconButton-label-25"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-29"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </span>
              <span
                className="MuiTouchRipple-root-73"
              />
            </a>
          </div>
        </li>
      </ul>
    </div>
  </ul>
</nav>
`;

exports[`Accounts index (Left Nav) snapshot matches with a few accounts but none selected 1`] = `
<nav
  className="MuiList-root-1 MuiList-dense-3 MuiList-padding-2 MuiList-subheader-4"
>
  <div
    className="MuiListSubheader-root-5 MuiListSubheader-sticky-10 MuiListSubheader-gutters-8"
  >
    Accounts
    <div
      className="MuiListItemSecondaryAction-root-11"
    >
      <a
        aria-current={null}
        aria-describedby={null}
        aria-label="New account"
        className="MuiButtonBase-root-26 MuiIconButton-root-20"
        href="/accounts/new"
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="0"
        title="New account"
      >
        <span
          className="MuiIconButton-label-25"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-29"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-73"
        />
      </a>
    </div>
  </div>
  <ul
    className="MuiList-root-1 MuiList-dense-3 MuiList-padding-2"
  >
    <div>
      <li
        className="MuiListItem-root-80 MuiListItem-default-83 MuiListItem-dense-84 MuiListItem-gutters-88"
        disabled={false}
      >
        <div
          className="MuiListItemIcon-root-92"
        >
          <InstitutionIcon
            institution="TD"
            size="small"
          />
        </div>
        <div
          className="MuiListItemText-root-93 MuiListItemText-dense-95"
        >
          <span
            className="MuiTypography-root-38 MuiTypography-subheading-45 MuiListItemText-primary-96 MuiListItemText-textDense-98"
          >
            TD
          </span>
        </div>
      </li>
      <ul
        className="MuiList-root-1 MuiList-dense-3 MuiList-padding-2"
      >
        <li
          className="MuiListItem-container-81"
        >
          <a
            aria-current={null}
            className="MuiButtonBase-root-26 MuiListItem-root-80 MuiListItem-default-83 MuiListItem-dense-84 MuiListItem-gutters-88 MuiListItem-button-89 MuiListItem-secondaryAction-90"
            href="/accounts/1/transactions"
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="MuiListItemText-root-93 MuiListItemText-dense-95"
            >
              <p
                className="MuiTypography-root-38 MuiTypography-body1-47 MuiTypography-colorTextSecondary-71 MuiListItemText-secondary-97 MuiListItemText-textDense-98"
              >
                <span>
                  NaN
                </span>
              </p>
            </div>
            <span
              className="MuiTouchRipple-root-73"
            />
          </a>
          <div
            className="MuiListItemSecondaryAction-root-11"
          >
            <a
              aria-current={null}
              aria-describedby={null}
              aria-label="Edit account"
              className="MuiButtonBase-root-26 MuiIconButton-root-20"
              href="/accounts/1/edit"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
              title="Edit account"
            >
              <span
                className="MuiIconButton-label-25"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-29"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </span>
              <span
                className="MuiTouchRipple-root-73"
              />
            </a>
          </div>
        </li>
        <li
          className="MuiListItem-container-81"
        >
          <a
            aria-current={null}
            className="MuiButtonBase-root-26 MuiListItem-root-80 MuiListItem-default-83 MuiListItem-dense-84 MuiListItem-gutters-88 MuiListItem-button-89 MuiListItem-secondaryAction-90"
            href="/accounts/2/transactions"
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="MuiListItemText-root-93 MuiListItemText-dense-95"
            >
              <p
                className="MuiTypography-root-38 MuiTypography-body1-47 MuiTypography-colorTextSecondary-71 MuiListItemText-secondary-97 MuiListItemText-textDense-98"
              >
                <span>
                  NaN
                </span>
              </p>
            </div>
            <span
              className="MuiTouchRipple-root-73"
            />
          </a>
          <div
            className="MuiListItemSecondaryAction-root-11"
          >
            <a
              aria-current={null}
              aria-describedby={null}
              aria-label="Edit account"
              className="MuiButtonBase-root-26 MuiIconButton-root-20"
              href="/accounts/2/edit"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
              title="Edit account"
            >
              <span
                className="MuiIconButton-label-25"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-29"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </span>
              <span
                className="MuiTouchRipple-root-73"
              />
            </a>
          </div>
        </li>
      </ul>
    </div>
    <div>
      <li
        className="MuiListItem-root-80 MuiListItem-default-83 MuiListItem-dense-84 MuiListItem-gutters-88"
        disabled={false}
      >
        <div
          className="MuiListItemIcon-root-92"
        >
          <InstitutionIcon
            institution="BMO"
            size="small"
          />
        </div>
        <div
          className="MuiListItemText-root-93 MuiListItemText-dense-95"
        >
          <span
            className="MuiTypography-root-38 MuiTypography-subheading-45 MuiListItemText-primary-96 MuiListItemText-textDense-98"
          >
            BMO
          </span>
        </div>
      </li>
      <ul
        className="MuiList-root-1 MuiList-dense-3 MuiList-padding-2"
      >
        <li
          className="MuiListItem-container-81"
        >
          <a
            aria-current={null}
            className="MuiButtonBase-root-26 MuiListItem-root-80 MuiListItem-default-83 MuiListItem-dense-84 MuiListItem-gutters-88 MuiListItem-button-89 MuiListItem-secondaryAction-90"
            href="/accounts/2/transactions"
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="MuiListItemText-root-93 MuiListItemText-dense-95"
            >
              <p
                className="MuiTypography-root-38 MuiTypography-body1-47 MuiTypography-colorTextSecondary-71 MuiListItemText-secondary-97 MuiListItemText-textDense-98"
              >
                <span>
                  NaN
                  <div
                    className="MuiChip-root-99"
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    role="button"
                    tabIndex={-1}
                  >
                    <span
                      className="MuiChip-label-118"
                    >
                      USD
                    </span>
                  </div>
                </span>
              </p>
            </div>
            <span
              className="MuiTouchRipple-root-73"
            />
          </a>
          <div
            className="MuiListItemSecondaryAction-root-11"
          >
            <a
              aria-current={null}
              aria-describedby={null}
              aria-label="Edit account"
              className="MuiButtonBase-root-26 MuiIconButton-root-20"
              href="/accounts/2/edit"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
              title="Edit account"
            >
              <span
                className="MuiIconButton-label-25"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-29"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </span>
              <span
                className="MuiTouchRipple-root-73"
              />
            </a>
          </div>
        </li>
      </ul>
    </div>
  </ul>
</nav>
`;

exports[`Accounts index (Left Nav) snapshot matches with no accounts and no selected accountId 1`] = `
<nav
  className="MuiList-root-1 MuiList-dense-3 MuiList-padding-2 MuiList-subheader-4"
>
  <div
    className="MuiListSubheader-root-5 MuiListSubheader-sticky-10 MuiListSubheader-gutters-8"
  >
    Accounts
    <div
      className="MuiListItemSecondaryAction-root-11"
    >
      <a
        aria-current={null}
        aria-describedby={null}
        aria-label="New account"
        className="MuiButtonBase-root-26 MuiIconButton-root-20"
        href="/accounts/new"
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="0"
        title="New account"
      >
        <span
          className="MuiIconButton-label-25"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-29"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-73"
        />
      </a>
    </div>
  </div>
  <span
    className="MuiTypography-root-38 MuiTypography-caption-48"
  >
    You don't have any accounts yet
  </span>
  <ul
    className="MuiList-root-1 MuiList-dense-3 MuiList-padding-2"
  />
</nav>
`;
